--- a/src/pages/WaveDataManagerSLDS.page
+++ b/src/pages/WaveDataManagerSLDS.page
@@ -39,10 +39,8 @@
 		<div class="slds-page-header">
 		    <div class="slds-media">
 		        <div class="slds-media__figure">
-		        	<span class="slds-icon_container slds-icon-standard-opportunity">
-						<svg class="slds-icon" aria-hidden="true">
-					    	<use xlink:href="{!URLFOR($Asset.SLDS, 'assets/icons/standard-sprite/svg/symbols.svg#opportunity')}"></use>
-					  	</svg>
+		        	<span class="slds-icon_container">
+                    	<apex:image url="{!URLFOR($Resource.AnalyticsDemoDataToolLogo)}" width="32" height="32" />
 					</span>
 		        </div>
 		        <div class="slds-media__body">
