--- a/force-app/main/default/pages/WaveDataManagerSLDS.page
+++ b/force-app/main/default/pages/WaveDataManagerSLDS.page
@@ -252,7 +252,7 @@
 										<apex:outputPanel rendered="{!selectedInstallationProcess = 'loadEdgemarts'}">
 
 											<div class="slds-m-top_small">
-												<label class="slds-form-element__label" for="dataflowInstalled">Select your already installed analytics App:</label>
+												<label class="slds-form-element__label" for="dataflowInstalled">Select your already installed analytics App (NOTE: This will modify its dataflow):</label>
 												<div class="slds-form-element__control ">
 													<div class="slds-select_container">
 														<apex:selectList styleClass="slds-select" value="{!selectedDataflow}" size="1" id="dataflowInstalled">
