--- a/force-app/main/default/pages/WaveDataManagerSLDS.page
+++ b/force-app/main/default/pages/WaveDataManagerSLDS.page
@@ -252,7 +252,18 @@
 										<apex:outputPanel rendered="{!selectedInstallationProcess = 'loadEdgemarts'}">
 
 											<div class="slds-m-top_small">
-												<label class="slds-form-element__label" for="dataflowInstalled">Select your already installed analytics App (NOTE: This will modify its dataflow):</label>
+												<label class="slds-form-element__label" for="appInstalled">Select your already installed analytics App (NOTE: This will modify all its assets):</label>
+												<div class="slds-form-element__control ">
+													<div class="slds-select_container">
+														<apex:selectList styleClass="slds-select" value="{!selectedAnalyticsApp}" size="1" id="appInstalled">
+															<apex:selectOptions value="{!orgAnalyticsApps}"/>
+														</apex:selectList>
+													</div>
+												</div>
+											</div>
+
+											<div class="slds-m-top_small">
+												<label class="slds-form-element__label" for="dataflowInstalled">Select dataflow (NOTE: This will modify the dataflow):</label>
 												<div class="slds-form-element__control ">
 													<div class="slds-select_container">
 														<apex:selectList styleClass="slds-select" value="{!selectedDataflow}" size="1" id="dataflowInstalled">
